fix(blog): alignment + spacings for article grids

--- a/packages/blog/preset/_assets/rocket-blog.css
+++ b/packages/blog/preset/_assets/rocket-blog.css
@@ -20,6 +20,8 @@ body[layout='layout-blog-details'] #sidebar-nav li.anchor a:hover::before {
   flex-wrap: wrap;
   margin: calc(-1 * var(--gap)) 0 0 calc(-1 * var(--gap));
   width: calc(100% + var(--gap));
+
+  align-items: flex-start;
 }
 
 .articles article {
@@ -32,6 +34,12 @@ body[layout='layout-blog-details'] #sidebar-nav li.anchor a:hover::before {
 .articles article h2 {
   margin: 0;
   border: none;
+  padding-top: 1rem;
+}
+
+.articles article .thumbnail {
+  display: block;
+  height: 200px;
 }
 
 .articles article .read {
@@ -48,7 +56,7 @@ body[layout='layout-blog-details'] #sidebar-nav li.anchor a:hover::before {
 }
 
 @media screen and (min-width: 1024px) {
-	body[layout='layout-blog-details'] #sidebar {
+  body[layout='layout-blog-details'] #sidebar {
     display: block;
-	}
+  }
 }
